--- a/Session3/src/main/webapp/gameFlow.xhtml
+++ b/Session3/src/main/webapp/gameFlow.xhtml
@@ -10,6 +10,7 @@
     <body bgcolor="white">
         <h:form prependId="false">
             <h1>Show Question</h1>
+            <p>Are you ready #{gameFlowBean.name}?</p>
             <p>Question: #{gameFlowBean.question}</p>
             <h:dataTable value="#{gameFlowBean.answers}" var="answer">
                 <h:column>#{gameFlowBean.answers.indexOf(answer)+1}</h:column>
