--- a/Session3/src/main/webapp/gameFlow.xhtml
+++ b/Session3/src/main/webapp/gameFlow.xhtml
@@ -2,7 +2,8 @@
 
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <head>
         <title>Show Question</title>
@@ -10,13 +11,21 @@
     <body bgcolor="white">
         <h:form prependId="false">
             <h1>Show Question</h1>
-            <p>Are you ready #{gameFlowBean.name}?</p>
+            <p>Are you ready #{gameFlowBean.user.name}?</p>
             <p>Question: #{gameFlowBean.question}</p>
             <h:dataTable value="#{gameFlowBean.answers}" var="answer">
                 <h:column>#{gameFlowBean.answers.indexOf(answer)+1}</h:column>
                 <h:column>#{answer}</h:column>
             </h:dataTable>
-
+            <p>
+            <h:selectOneMenu value="#{gameFlowBean.answer}">
+                <f:selectItem itemValue="1" itemLabel="1"/>
+                <f:selectItem itemValue="2" itemLabel="2"/>
+                <f:selectItem itemValue="3" itemLabel="3"/>
+                <f:selectItem itemValue="4" itemLabel="4"/>
+            </h:selectOneMenu>
+            </p>
+            
             <p><span id="param1FromFlow1">#{flowScope.param1Value}</span></p>
             <p><span id="param2FromFlow1">#{flowScope.param2Value}</span></p>
 
