--- a/Session3/src/main/webapp/index.xhtml
+++ b/Session3/src/main/webapp/index.xhtml
@@ -11,7 +11,7 @@
         <h1>Who wants to be a Millionaire?</h1>
 
         <h:form prependId="false">
-	        <p>Name: <h:inputText name="name" id="name" value="#{gameFlowBean.name}"/></p>
+	        <p>Name: <h:inputText name="name" id="name" value="#{gameFlowBean.user.name}"/></p>
             <p><h:commandButton id="start" value="Start Game" action="#{gameFlowBean.startGame}"/></p>
         </h:form>
     </body>
