--- a/react-training-11/index.html
+++ b/react-training-11/index.html
@@ -3,9 +3,7 @@
   <head>
     <title>React Training</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,700" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="./src/styles/basscss.css">
-    <link rel="stylesheet" href="./src/styles/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   </head>
 
   <body>
@@ -14,7 +12,8 @@
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
     <script>
-      System.import('./src/index.js');
+      System.import('./src/index2.js');
     </script>
+
   </body>
 </html>
